--- a/templates/landing.html
+++ b/templates/landing.html
@@ -190,7 +190,7 @@
     <h1>Spark BI & Prediction System</h1>
     
     <p class="subtitle">
-      Dive into the sales assets, where innovative blockchain technology meets financial expertise to forecast your future.
+      Dive into the sales assets, where AI meets business.
     </p>
 
     <div class="button-group">
@@ -213,4 +213,5 @@
   </div>
 
 </body>
+
 </html>
