--- a/templates/landing.html
+++ b/templates/landing.html
@@ -194,7 +194,7 @@
     </p>
 
     <div class="button-group">
-      <a href="/dashboard" class="btn btn-secondary">Open App ↗</a>
+      <a href="/dashboard" class="btn btn-secondary">To dashboard ↗</a>
     </div>
 
     <div class="scroll-down">
@@ -215,3 +215,4 @@
 </body>
 
 </html>
+
