--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -551,7 +551,7 @@ body.light {
         <div>
             <p>Avg Sales : <span id="avgSalesValue">--</span></p>
             <p>Total Sales : <span id="totalSalesValue">--</span></p>
-            <p style="font-size: 20px;">Predicted Sales<b id="predictedValue" style="color:var(--accent-purple)">--</b></p>
+            <p style="font-size: 20px;">Predicted Sales : <b id="predictedValue" style="color:var(--accent-purple)">--</b></p>
             <p id="predictionStatus"></p>
         </div>
         <canvas id="predictCompareChart"></canvas>
@@ -654,3 +654,4 @@ setInterval(updateTime, 1000);
 
 </body>
 </html>
+
